--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended, plugin:vue/vue3-essential"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
